<resources>
    <string name="app_name">Good Trip</string>

    <!--Tela de login-->
    <string name="usuarioTextView">USUÁRIO</string>
    <string name="senhaTextView">SENHA</string>
    <string name="entrar">ENTRAR</string>

    <!--Tela DashBoard-->
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>

    <!--Tela de Nova Viagem-->
    <string name="destino">Destino</string>
    <string name="tipo_viagem">Tipo da viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocio">Negócio</string>
    <string name="data_chegada">Data de chegada</string>
    <string name="data_saida">Data de saída</string>
    <string name="selecione">Selecione</string>
    <string name="orcamento">Orçamento</string>
    <string name="qtd_pessoas">Quantidade de pessoas</string>
    <string name="salvar">Salvar</string>

    <!--Tela de Novo Gasto-->
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="local">Local</string>
    <string name="descricao">Descrição</string>
    <string name="gastei">Gasto</string>
    <string name="categoria">Categoria</string>
    <!--Array para preenchimento do Spinner-->
    <string-array name="categorias">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>


    <!--Menu Dashboard -->
    <string name="sair">Sair</string>

    <!--Options Menu Viagem-->
    <string name="remover_viagem">Remover</string>

    <!--Menu Contexto Gasto-->
    <string name="remover_gasto">Remover</string>

    <!--AlertDialog ViagemListActivity-->
    <string name="editar">Editar</string>
    <string name="gastos_realizados">Gastos</string>
    <string name="opcoes">Opções</string>

    <!--AlerDialog Confirmação ViagemListActivity-->
    <string name="confirmacao_exclusao_viagem">Deseja confirmar a exclusão da VIAGEM ?</string>
    <string name="sim">SIM</string>
    <string name="nao">NÃO</string>
    <string name="cancelar">CANCELAR</string>


    <!-- Mensagens de Erro -->
    <string name="erro_autentificacao">Usuário e/ou senha inválidos!</string>

</resources>
